--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "datadata",
   "version": "0.1.0",
-  "description": "Data loading and processing",
+  "author": "Florian Ledermann <florian.ledermann@tuwien.ac.at>",
+  "license": "AGPL-3.0",
+  "description": "Data loading and processing library",
   "main": "src/index",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/floledermann/datadata.js.git"
+  },
   "scripts": {
     "test": "mocha",
     "doc": "jsdoc src/index.js -d doc",
@@ -13,8 +19,6 @@
     "promise",
     "utilities"
   ],
-  "author": "Florian Ledermann <florian.ledermann@tuwien.ac.at>",
-  "license": "AGPL-3.0",
   "devDependencies": {
     "browserify": "^10.2.4",
     "jsdoc": "^3.3.2",
