--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "scripts": {
     "test": "mocha",
+    "build": "npm run browserify",
     "doc": "jsdoc src/index.js -d doc",
-    "browserify": "browserify src/index.js -o datadata.js"
+    "browserify": "browserify src/index.js -o datadata.js",
+    "preversion": "npm test",
+    "version": "npm run build"
   },
   "keywords": [
     "data",
