--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "url": "https://github.com/floledermann/datadata.js.git"
   },
   "scripts": {
+    "lint": "jshint src",
     "test": "mocha",
     "build": "npm run browserify",
     "doc": "jsdoc src/index.js -d doc",
+    
     "browserify": "browserify src/index.js -i d3-dsv -o datadata.js",
+    
+    "prepublish": "npm run build",
     "preversion": "npm test",
     "version": "npm run build && git add datadata.js"
   },
@@ -28,6 +32,7 @@
   "devDependencies": {
     "browserify": "^10.2.4",
     "jsdoc": "^3.3.2",
+    "jshint": "^2.8.0",
     "mocha": "^2.2.5",
     "mockery": "^1.4.0"
   }
